# thread_safe_example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/common/: common.hpp
include/core/: task.hpp
libs/ts_queue/: CMakeLists.txt  ts_blocking_queue.hpp  ts_mpmc_queue.hpp  ts_queue.hpp
libs/utils/: CMakeLists.txt
libs/utils/include/: printer.hpp
libs/utils/src/: printer.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp
src/core/: CMakeLists.txt  printer.cpp  printer.hpp  task.cpp  ts_queue_mutex.hpp  worker.cpp  worker.hpp
